--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,19 +2,7 @@
 
 @font-face {
   font-family: 'UrbanistCustom';
-  src: url('./assets/fonts/Urbanist-master/Urbanist-Regular.ttf') format('truetype');
-  font-weight: 200;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'boldy';
-  src: url('./assets/fonts/Urbanist-master/Urbanist-Regular.ttf') format('truetype');
-  font-weight: 800;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'thiny';
-  src: url('./assets/fonts/Urbanist-master/Urbanist-Regular.ttf') format('truetype');
+  src: url('/assets/fonts/Urbanist-Regular.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
